--- a/index.css
+++ b/index.css
@@ -1,1 +1,38 @@
+body {
+  background: #ffcc80;
+}
 
+ul.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li.nav {
+  float: left;
+}
+
+li.nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li.nav a:hover:not(.active) {
+  background-color: #222;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+
+footer.footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
